fix responsivness done column no more stretch to whole width when it has free space

--- a/src/styles/components/_columns.scss
+++ b/src/styles/components/_columns.scss
@@ -1,5 +1,4 @@
 .tasks__column {
-  flex: 1 40rem;
   position: relative;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 1rem;
